added some more styling

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-ts-typewriter": "^0.1.8-b",
+    "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
     "@types/node": "18.15.11",
