--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-ts-typewriter": "^0.1.8-b",
+    "tailwind-merge": "^1.14.0",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.31",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.31",
     "autoprefixer": "^10.4.14",
+    "next-themes": "^0.2.1",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "typescript": "^5.2.2"
   }
 }
