--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-scroll": "^1.9.0",
     "react-ts-typewriter": "^0.1.8-b",
     "tailwind-merge": "^1.14.0",
     "typewriter-effect": "^2.19.0"
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.31",
+    "@types/react-scroll": "^1.8.10",
     "autoprefixer": "^10.4.14",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.21",
