--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.12.0",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "class-variance-authority": "^0.7.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
-    "framer-motion": "^10.10.0",
+    "framer-motion": "^10.16.16",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
